# bamkit

./: .gitignore  Makefile.am  README.md  build.sh
src/: Makefile.am  bamkit.cc  bamkit.h  configure.ac  hit.cc  hit.h  main.cc
src/src/: Makefile.am  bamkit.cc  main.cc
